# server/docs/swagger.yaml
@@ -153,7 +153,7 @@ paths:
                 msg:
                   type: string
               type: object
-      summary: 重置密码
+      summary: 获取验证码
       tags:
       - base
   /base/login:
@@ -184,6 +184,27 @@ paths:
       summary: 用户登录
       tags:
       - base
+  /cache/test-cache:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回结果信息
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: object
+                msg:
+                  type: string
+              type: object
+      summary: 测试local_cache
+      tags:
+      - test
   /init/check:
     post:
       produces:
@@ -268,7 +289,7 @@ paths:
       summary: 升级DB
       tags:
       - db
-  /user/disable/{id}:
+  /user/disable/:{id}:
     delete:
       parameters:
       - description: 用户ID
@@ -321,7 +342,7 @@ paths:
       summary: 禁用用户
       tags:
       - user
-  /user/enable/{id}:
+  /user/enable/:{id}:
     put:
       parameters:
       - description: 用户ID
